tests/cases/scc/error/0001-sanity.c
//!necc-dbg @ -as
int main()
{
	return FOO;
}

